# axis

./: CMakeLists.txt  README.md  architecture.md
.cache/clangd/index/: main.cpp.43C60B64A82A2538.idx  sbbf.hpp.59B869DD97C4CDA3.idx  socket.hpp.265B264733D24ECA.idx  spsc.hpp.8D611D53BA9097DF.idx  spsc_test.cpp.6FFDA6751471ED69.idx
cmake/: axisConfig.cmake.in
include/: sbbf.hpp  spsc.hpp
include/axis/: parser.hpp  router.hpp  sbbf.hpp  socket.hpp  trie.hpp  unique_ptr.hpp  vector.hpp
src/: main.cpp
tests/: CMakeLists.txt  spsc_test.cpp
